syntax = "proto3";

option csharp_namespace = "Users.Grpc";

service UsersProtoService {
  rpc IsUserExist(IsUserExistRequest) returns (IsUserExistResponse);
}

message IsUserExistRequest {
  int32 id = 1;
}

message IsUserExistResponse {
  bool isExist = 1;
}
